implement delete, deleteAll and create method
